fixing alignement (#78)

--- a/src/components/CheckboxItemsList/checkboxItemsList.module.scss
+++ b/src/components/CheckboxItemsList/checkboxItemsList.module.scss
@@ -1,6 +1,8 @@
 .container {
   display: flex;
   flex-direction: column;
+  align-items: flex-start;
+  width: 100%;
   gap: 0.5rem;
   margin-bottom: 1rem;
 
